Make everything source-agnostic (#25)
* fix unintentional filter

* make types source-agnostic

* make everything source-agnostic

* fix details buttons

* display skill and duty counts

* fix id references

* tidy up

* fix skill filters and id types

* tidy up

---------
